testsuite/tests/rename/should_fail/T23512a.stderr
T23512a.hs:6:31: error: [GHC-76037] Not in scope: type variable ‘j’

T23512a.hs:6:36: error: [GHC-76037] Not in scope: type variable ‘j’
